fixed cost column to update from saved data

--- a/static/style.css
+++ b/static/style.css
@@ -9,8 +9,10 @@
     --black: #212121;
     --green: #71BC78;
     font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
-    font-size: 16px;
+    font-size: 14px;
 }
+
+/* Every page */
 
 h1 {
     text-align: center;
@@ -24,18 +26,23 @@ body {
     min-height: 100vh; /* Full height of viewport */
 }
 
-.delete {
-    background-color: #ee9286;
+/* Welcome page (index.html) */
+
+#load-saved-data-btn {
+    display: none;
 }
-.delete .btn-delete, .keep .btn-carryover, .supp .btn-supplemental {
-    background-color: #373A37;
+
+/* Sidebar */
+
+#sidebar {
+    background-color: lightgrey;  
+  }
+
+#supp-total {
+    color: var(--yellow);
 }
-.keep {
-    background-color: #90ee90;
-}
-.supp {
-    background-color: #e0b472;
-}
+
+/* Button styling */
 
 .btn {
     cursor:pointer;
@@ -45,36 +52,12 @@ body {
     background-color: gray;
     color: white; 
 }
-.btn-delete {
-    background-color: var(--orange);
-    color: white;
-}
-.btn-supplemental {
-    background-color: var(--yellow);
-    color: white;
-}
-.btn-carryover {
-    background-color: var(--green);
-    color: white;
-}
-.btn-add {
-    background-color: var(--blue);
-    color: white;
-}
 
-.new-row{
-    margin: 20px;
-    text-align: center;
-}
-.next-button-row {
-    text-align: right;
-}
+/* Table generics */
 
-/* Some additional styling to the table for aesthetics */
 .table-container {
     margin-top: 20px;
 }
-
 
 thead > tr > th {
     text-align: left;
@@ -92,14 +75,48 @@ tr td {
     border-bottom: 1px solid black;
 }
 
-#sidebar {
-  background-color: lightgrey;  
-}
+/* Action buttons */
 
 .action-btns {
     text-align: center;
 }
 
-#supp-total {
-    color: var(--yellow);
+.delete {
+    background-color: #ee9286;
+}
+.delete .btn-delete, .keep .btn-carryover, .supp .btn-supplemental {
+    background-color: #373A37;
+}
+.keep {
+    background-color: #90ee90;
+}
+.supp {
+    background-color: #e0b472;
+}
+
+.btn-delete {
+    background-color: var(--orange);
+    color: white;
+}
+.btn-supplemental {
+    background-color: var(--yellow);
+    color: white;
+}
+.btn-carryover {
+    background-color: var(--green);
+    color: white;
+}
+.btn-add {
+    background-color: var(--blue);
+    color: white;
+}
+
+/* Go to next page */
+
+.new-row{
+    margin: 20px;
+    text-align: center;
+}
+.next-button-row {
+    text-align: right;
 }
