deleting extraneous files

--- a/js/components/sidebar/sidebar.css
+++ b/js/components/sidebar/sidebar.css
@@ -2,3 +2,11 @@
     background-color: lightgrey;  
     /* min-height: 100vh; Full height of viewport */
   }
+
+#supp-total .stat {
+    color: var(--yellow);
+}
+
+.stat {
+    font-weight: bold;
+}
