building out sequence; adding fund data and tabler

--- a/js/components/welcome/welcome.css
+++ b/js/components/welcome/welcome.css
@@ -1,11 +1,11 @@
 /* Welcome page (index.html) */
 
 .step {
-    width: 90%;
-    height: 100px;
+    width: 60%;
+    height: 80px;
     font-size: 1.75em;
-    /* margin-top: 10px; */
-    margin-bottom: 10px;
+    margin-bottom: 0px; /* Adds spacing between buttons */
+    margin-left: 20%;
 }
 
 #step-upload { background-color: var(--blue);}
@@ -17,12 +17,10 @@
 
 .step:hover {
     color: white;
-    opacity: 50%;;
+    opacity: 50%;
 }
 
 #welcome-page {
-    display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-    flex-wrap: wrap; 
+    justify-content: center; 
+    align-items: center; 
 }
