--- a/css/common.css
+++ b/css/common.css
@@ -33,6 +33,8 @@ body {
     cursor: pointer;
     padding: 10px;
     margin-top: 5px;
+    margin-right : 2px;
+    margin-left: 2px;
     border-radius: 10px;
     background-color: gray;
     color: white; 
