--- a/js/components/table/table.css
+++ b/js/components/table/table.css
@@ -36,6 +36,10 @@ input {
     display: none;
 }
 
+.btn-delete {
+    background-color: var(--orange);
+}
+
 #add-btn-div {
     display: flex;
     justify-content: center; /* Aligns horizontally */
@@ -53,4 +57,8 @@ input {
 
 .btn-confirm {
     display: none;
+}
+
+.confirm-btn:hover {
+    background-color: var(--green);
 }
