support to save fund

--- a/css/common.css
+++ b/css/common.css
@@ -11,6 +11,7 @@
     --citygreen: #004445;
     --spiritgreen: #279989;
     --palegreen: #9FD5B3;
+    --verypalegreen: #DFF5E3;
     --accentyellow: #feb70d;
     --nearblack: #18252a;
     font-family: 'Clear Sans', 'Helvetica Neue', Arial, sans-serif;
