--- a/js/components/table/table.css
+++ b/js/components/table/table.css
@@ -22,12 +22,15 @@ input {
 
 .table-container {
     display: table; 
-    margin: auto; 
+    overflow-x: auto; /* Scroll horizontally if the table content is wider than the container */
+    overflow-y: auto;
+    margin: auto; /* Optional: center the table container in the middle of the screen */
 }
   
 #main-table {
-    width: auto; 
-    margin: auto; 
+    max-width: 0;
+    max-width: calc(100vw - 350px); 
+    font-size: calc(0.7vw + 0.5em)
 }
 
 /* Add new row button */
