--- a/js/components/sidebar/sidebar.css
+++ b/js/components/sidebar/sidebar.css
@@ -12,7 +12,6 @@
 }
 
 #sidebar-panel {
-    min-width: 250px; /* Adjust the width as per your design requirements */
     height: 100%; /* Full height of the viewport */
     position: fixed; /* Fixed Sidebar (stay in place on scroll) */
     z-index: 1; /* Stay on top */
@@ -20,10 +19,12 @@
     right: 0; /* Sidebar appears on the left */
     background-color: #FFFFFF; /* White background color */
     overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 20px; /* Some top padding */
+    padding: 20px; /* Some top padding */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Add shadow for some depth */
     border-right: 2px solid #DDDDDD; /* Right border */
     border-radius: 15px 0px 0px 15px; /* Rounded corners on the left */
+    /* margin-top: var(--header-height); */
+    width: var(--sidebar-width);
   }
   
 .sidebar a {
