--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,5 @@
 :root {
+    /* colors */
     --orange: #FB6523;
     --yellow: #D99733;
     --blue: #43748E;
@@ -14,10 +15,12 @@
     --verypalegreen: #DFF5E3;
     --accentyellow: #feb70d;
     --nearblack: #18252a;
+    /* fonts */
     font-family: 'Nunito', sans-serif;
-    /* font-family: 'Montserrat', sans-serif; */
-
     font-size: 14px;
+    /* spacing */
+    --header-height : 125px;
+    --sidebar-width: 220px;
 }
 
 /* Button styling */
@@ -37,3 +40,7 @@
 body, button, input, textarea, select, .sidebar, table {
     font-family: var(--font-family), sans-serif;
   }
+
+#main-panel {
+    max-width: calc(100vw - var(--sidebar-width)); 
+}
