--- a/js/components/header/header.css
+++ b/js/components/header/header.css
@@ -7,3 +7,23 @@ h2 {
     color: var(--darkGray);
     text-align: center;
 }
+
+header {
+    align-items: center;
+    background-color: white;
+    padding: 5px;
+    margin-bottom: 35px;
+    border-bottom: 1px solid var(--citygreen); 
+    /* border: 1px solid var(--citygreen);  */
+    height: var(--header-height);
+    width: calc(100vw - var(--sidebar-width));
+    padding-left: 20px;
+}
+
+/* Logo styling */
+#logo {
+    height: 50px; /* Or your desired size */
+    margin-right: 20px; /* Optional: space between logo and title */
+    margin-bottom: -50px;
+    margin-top: 20px;
+}
