--- a/js/components/prompt/prompt.css
+++ b/js/components/prompt/prompt.css
@@ -1,8 +1,8 @@
 #prompt-div {
     display: none;
     text-align: center;
-    width: 60%;
-    margin-left: 20%;
+    width: 80%;
+    margin: auto;
 }
 
 #prompt {
