--- a/js/components/sidebar/sidebar.css
+++ b/js/components/sidebar/sidebar.css
@@ -19,12 +19,13 @@
     right: 0; /* Sidebar appears on the left */
     background-color: #FFFFFF; /* White background color */
     overflow-x: hidden; /* Disable horizontal scroll */
-    padding: 20px; /* Some top padding */
+    padding: 20px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Add shadow for some depth */
     border-right: 2px solid #DDDDDD; /* Right border */
     border-radius: 15px 0px 0px 15px; /* Rounded corners on the left */
     /* margin-top: var(--header-height); */
     width: var(--sidebar-width);
+    margin: 0px;
   }
   
 .sidebar a {
@@ -34,4 +35,10 @@
     color: #818181;
     display: block;
     transition: 0.3s;
+}
+
+#sidebar-title {
+  color: var(--darkGray);
+  font-weight: bold;
+  border-bottom: 1px solid var(--citygreen);
 }
