--- a/js/components/table/table.css
+++ b/js/components/table/table.css
@@ -21,20 +21,21 @@ input {
 }
 
 div.table-container {
-    display: table; 
-    overflow-x: auto; /* Scroll horizontally if the table content is wider than the container */
+    overflow-x: auto; 
     overflow-y: auto;
-    padding-left: max(100px, 10vh);
-    padding-right: max(100px, 10vh);
+    margin-left: max(65px, 7vh);
+    margin-right: max(65px, 7vh);
     max-width: calc(100vw - var(--sidebar-width)); 
-    margin: auto;
-    min-height: 120px;
+    /* margin: auto; */
+    max-height: max(300px, 4vh);
+    /* min-height: 120px; */
 
 }
   
 #main-table {
     font-size: calc(0.6vw + 0.5em);
     margin: auto;
+    width: 100%;
 }
 
 /* Add new row button */
