initialized summary page

--- a/css/common.css
+++ b/css/common.css
@@ -5,6 +5,7 @@
     --blue: #43748E;
     --lightBlue: #b7c9e2;
     --darkGray: #373A37;
+    --mediumGray: #D0D0D0;
     --lightGray: #F2F2F2;
     --white: #FBFDFB;
     --black: #212121;
