--- a/js/components/accordion/accordion.css
+++ b/js/components/accordion/accordion.css
@@ -3,8 +3,51 @@
     margin: auto
 }
 
+#accordion-baseline-title {
+    margin-left: 20%;
+    font-weight: bold;
+    padding-bottom: 10px;
+    padding-left: 15px;
+    padding-top: 30px;
+}
+
 .accordion-button:active, .accordion-button:not(.collapsed) {
     background-color: var(--palegreen);
     color: var(--citygreen);
 }
 
+.accordion-table { 
+    width: 100%;
+    font-size: 1.25em;
+    /* border-collapse: separate; This is required for rounded corners */
+}
+
+.accordion-table td:last-child {
+    text-align: right;
+    padding-right: 15px;
+    padding-bottom: 5px
+}
+
+.accordion-table tr {
+    border-bottom: 1px solid black;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+}
+
+.accordion-table tr:last-child {
+    border-bottom: none;
+    background-color: var(--mediumGray);
+    height : 50px;
+}
+
+span.amount {
+    font-weight: bold;
+    position: absolute;
+    right: 0;
+    margin-right: 60px;
+}
+
+.accordion-header button {
+    font-size: 0.8em;
+}
