resets sidebar stats on welcome page

--- a/js/components/table/table.css
+++ b/js/components/table/table.css
@@ -1,5 +1,7 @@
-thead > tr > th {
+#main-table thead > tr > th {
     text-align: left;
+    background-color: var(--darkGray);
+    color: white;
 }
 
 th {
