#23 fixed inits table saving and loading from local storage

--- a/js/components/table/table.css
+++ b/js/components/table/table.css
@@ -49,7 +49,7 @@ div.table-container {
     /* max-width: calc(100vw - var(--sidebar-width));  */
     /* margin: auto; */
     max-height: max(350px, 6vh);
-    min-height: 350px;
+    /* min-height: 350px; */
 
 }
   
