#17 added a placeholder for the supplementals in the summary view.

--- a/js/components/accordion/accordion.css
+++ b/js/components/accordion/accordion.css
@@ -1,9 +1,9 @@
-#summary-accordion {
+.summary-accordion {
     width: 60%;
-    margin: auto
+    margin: auto;
 }
 
-#accordion-baseline-title {
+.accordion-title {
     margin-left: 20%;
     font-weight: bold;
     padding-bottom: 10px;
