--- a/src/js/components/table/table.css
+++ b/src/js/components/table/table.css
@@ -8,6 +8,9 @@
     text-align: left;
     background-color: var(--darkGray);
     color: white;
+    position: -webkit-sticky; /* For Safari */
+    position: sticky;
+    top: 0;
 }
 
 th {
