org sidebar by fund; fix target calculation to only use GF

--- a/src/js/components/sidebar/sidebar.css
+++ b/src/js/components/sidebar/sidebar.css
@@ -42,3 +42,12 @@
   font-weight: bold;
   border-bottom: 1px solid var(--citygreen);
 }
+
+hr {
+  margin-top: -5px;
+  margin-bottom: 8px;
+}
+
+h6 {
+  font-weight: 600;
+}
