fix duplicate search bars; fix sidebar loading on empty table

--- a/src/js/components/table/table.css
+++ b/src/js/components/table/table.css
@@ -2,7 +2,7 @@
     font-size: 12px;
     /* calc(0.5vw + 0.5em); */
     margin: auto;
-    /* width: 100%; */
+    width: 100%;
 }
 
 #main-table thead > tr > th {
@@ -110,4 +110,25 @@ div.table-container {
 /* made edit column narrower */
 th.edit, td.edit {
     width: 20px;
+}
+
+#search-bar-container {
+    display: flex;
+    justify-content: flex-end;  /* Align the search bar to the right */
+    align-items: center;  /* Vertically center content */
+    margin-left: max(65px, 7vh);
+    margin-right: max(80px, 7vh);
+    margin-bottom: -10px;
+}
+
+#search-bar-container label {
+    display: flex;
+    align-items: center;  /* Vertically center the label and input */
+}
+
+#search-bar-container input[type="search"] {
+    width: auto;  /* Adjust the width of the search bar as needed */
+    margin-left: 5px;  /* Space between the label and input */
+    height: 100%;  /* Ensure the input height is consistent */
+    margin-top: 15px;
 }
