reformat filter; make space with rest of page using css updates

--- a/src/js/components/nav_buttons/nav_buttons.css
+++ b/src/js/components/nav_buttons/nav_buttons.css
@@ -1,7 +1,8 @@
 #nav-btns {
     margin: 20px;
     text-align: center;
-    /* margin-top: 100px; */
+    margin-top: 5px;
+    margin-bottom: 5px;
     /* position: absolute; or 'absolute' depending on use-case */
     /* top: 100px; Distance from the top of the viewport or the closest positioned ancestor */
 }
