--- a/src/js/components/header/header.css
+++ b/src/js/components/header/header.css
@@ -1,11 +1,13 @@
 
 h1 {
     text-align: center;
+    font-size: 30px;
 }
 
 h2 {
     color: var(--darkGray);
     text-align: center;
+    font-size: 20px;
 }
 
 header {
@@ -24,5 +26,5 @@ header {
     height: 50px; /* Or your desired size */
     margin-right: 20px; /* Optional: space between logo and title */
     margin-bottom: -50px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
