--- a/src/js/components/table/table.css
+++ b/src/js/components/table/table.css
@@ -169,3 +169,8 @@ th.edit, td.edit {
         margin-bottom: 5px;
     }
 }
+
+/* Notes textbox should be bigger */
+.notes input {
+    height: 50px;
+}
