--- a/src/js/components/file_upload/file_upload.css
+++ b/src/js/components/file_upload/file_upload.css
@@ -1,3 +1,28 @@
 #file-input {
     margin-left: 40%;
 }
+
+/* Spinner Styles */
+.spinner {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border: 6px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    border-top-color: var(--spiritgreen);
+    animation: spin 1s ease-in-out infinite;
+    position: fixed; /* Ensures it stays in place */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999; /* Ensures it appears in front of other elements */
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
