--- a/src/js/components/file_upload/file_upload.css
+++ b/src/js/components/file_upload/file_upload.css
@@ -5,17 +5,19 @@
 /* Spinner Styles */
 .spinner {
     display: inline-block;
-    width: 50px;
-    height: 50px;
-    border: 6px solid rgba(0, 0, 0, 0.1);
+    width: 150px;
+    height: 150px;
+    border: 20px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     border-top-color: var(--spiritgreen);
     animation: spin 1s ease-in-out infinite;
-    position: fixed; /* Ensures it stays in place */
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    position: fixed; /* Ensures it stays fixed relative to the viewport */
+    top: 20%; /* Center vertically */
+    left: 43%; /* Center horizontally */
+    transform: translate(-50%, -50%); /* Centralize the spinner exactly */
     z-index: 9999; /* Ensures it appears in front of other elements */
+    background-color: rgba(255, 255, 255, 0.8); /* Optional: light background */
+    padding: 20px; /* Optional: extra padding for better visibility */
   }
   
   @keyframes spin {
