added readonly red outline in new job modal

--- a/src/js/components/form/form.css
+++ b/src/js/components/form/form.css
@@ -20,3 +20,9 @@ textarea, input {
     min-width: 300px;
     margin-bottom: 1.25em;
 }
+
+/* Thicker red border when focused */
+input[readonly]:focus {
+    border: 2px solid red;
+    outline: none; /* Remove the default outline */
+  }
