attempting to mark new row

--- a/src/js/components/table/table.css
+++ b/src/js/components/table/table.css
@@ -26,6 +26,10 @@ tr {
     background-color: white;
 }
 
+.new-row {
+    background-color: var(--palegreen);
+}
+
 tr td {
     border-bottom: 1px solid black;
 }
