--- a/src/js/components/nav_buttons/nav_buttons.css
+++ b/src/js/components/nav_buttons/nav_buttons.css
@@ -7,11 +7,11 @@
     /* top: 100px; Distance from the top of the viewport or the closest positioned ancestor */
 }
 
-#btn-next, #btn-last {
+#btn-next, #btn-last, #return-to-summary {
     background-color: var(--darkGray);
 }
 
-#btn-next:hover, #btn-last:hover {
+#btn-next:hover, #btn-last:hover, #return-to-summary:hover {
     background-color: var(--yellow);
     color: var(--darkGray);
 }
